Changed animation delay to 0.

--- a/demo/index.html
+++ b/demo/index.html
@@ -108,7 +108,15 @@
 			<!-- paper-icon-buttons have an inherent padding that will push the tooltip down. offset undoes it -->
 			<cbn-tooltip for="heart" offset="0">&lt;3 &lt;3 &lt;3</cbn-tooltip>
 			<cbn-tooltip for="back" offset="0">halp I am trapped in a tooltip</cbn-tooltip>
-			<cbn-tooltip for="fwd" offset="0">back to the future</cbn-tooltip>
+			<cbn-tooltip for="fwd" offset="0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+				Etiam pulvinar erat id nisi facilisis mollis. Aliquam erat volutpat. 
+				Pellentesque a vehicula enim. Praesent dictum nulla ac ipsum condimentum eleifend. 
+				Morbi blandit orci id felis sollicitudin, vel lobortis mauris iaculis. 
+				Morbi ultrices, massa sed viverra venenatis, metus nulla placerat lorem, at sodales dui dolor at massa. 
+				Vivamus turpis nunc, tincidunt ac velit id, vulputate tincidunt ligula. Donec ac malesuada ex. 
+				Nullam sit amet venenatis odio, ornare gravida velit. Cras vitae leo finibus orci consectetur vehicula. 
+				Duis sed tortor tellus. Vestibulum nisl quam, viverra non eleifend ut, elementum non enim. 
+				Suspendisse maximus nisl ac sapien dignissim pellentesque.</cbn-tooltip>
 		</div>
 	</div>
 	<div>
