--- a/demo/index.html
+++ b/demo/index.html
@@ -106,9 +106,9 @@
 			<paper-icon-button id="fwd" icon="arrow-forward" alt="go forward"></paper-icon-button>
 			
 			<!-- paper-icon-buttons have an inherent padding that will push the tooltip down. offset undoes it -->
-			<cbn-tooltip for="heart" offset="0">&lt;3 &lt;3 &lt;3</cbn-tooltip>
-			<cbn-tooltip for="back" offset="0">halp I am trapped in a tooltip</cbn-tooltip>
-			<cbn-tooltip for="fwd" offset="0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+			<cbn-tooltip for="#heart" offset="0">&lt;3 &lt;3 &lt;3</cbn-tooltip>
+			<cbn-tooltip for="#back" offset="0">halp I am trapped in a tooltip</cbn-tooltip>
+			<cbn-tooltip for="#fwd" offset="0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 				Etiam pulvinar erat id nisi facilisis mollis. Aliquam erat volutpat. 
 				Pellentesque a vehicula enim. Praesent dictum nulla ac ipsum condimentum eleifend. 
 				Morbi blandit orci id felis sollicitudin, vel lobortis mauris iaculis. 
@@ -127,19 +127,19 @@
 			<div id="green" class="avatar green" tabindex="0"></div>
 			<div id="orange" class="avatar orange" tabindex="0"></div>
 			
-			<cbn-tooltip for="red" class="custom" position="left" animation-delay="0">
+			<cbn-tooltip for="#red" class="custom" position="left" animation-delay="0">
 				<img src="http://i.imgur.com/OuUe8Da.jpg">
 				Rich-text tooltips are doable but against the Material Design spec.
 			</cbn-tooltip>
-			<cbn-tooltip for="blue" class="custom" position="right" animation-delay="0">
+			<cbn-tooltip for="#blue" class="custom" position="right" animation-delay="0">
 				<img src="http://i.imgur.com/OuUe8Da.jpg">
 				Rich-text tooltips are doable but against the Material Design spec.
 			</cbn-tooltip>
-			<cbn-tooltip for="green" class="custom" position="top" animation-delay="0">
+			<cbn-tooltip for="#green" class="custom" position="top" animation-delay="0">
 				<img src="http://i.imgur.com/OuUe8Da.jpg">
 				Rich-text tooltips are doable but against the Material Design spec.
 			</cbn-tooltip>
-			<cbn-tooltip for="orange" class="custom" position="bottom" animation-delay="0">
+			<cbn-tooltip for="#orange" class="custom" position="bottom" animation-delay="0">
 				<img src="http://i.imgur.com/OuUe8Da.jpg">
 				Rich-text tooltips are doable but against the Material Design spec.
 			</cbn-tooltip>
