removed the positionFixTransform from cbn-tooltip

--- a/cbn-tooltip.html
+++ b/cbn-tooltip.html
@@ -168,6 +168,13 @@ Custom property            | Description                           | Default
 			_showing: {
 				type: Boolean,
 				value: false
+			},
+			/**
+			 * Whether to apply fix for CSS transform modifying the coordinate system of the target element.
+			 */
+			positionFixTransform: {
+				type: String,
+				value: 'false'
 			}
 			
 		},
