--- a/demo/index.html
+++ b/demo/index.html
@@ -5,27 +5,30 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
-	
+
 	<script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-	
+
 	<link rel="import" href="../../paper-styles/demo-pages.html">
 	<link rel="import" href="../../paper-styles/color.html">
-	
+
 	<link rel="import" href="../../paper-icon-button/paper-icon-button.html">
 	<link rel="import" href="../../iron-icons/iron-icons.html">
 	<link rel="import" href="../cbn-tooltip.html">
-	
+
+	<link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
+	<link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
+
 	<style is="custom-style">
 		.horizontal-section {
 			min-width: 120px;
 		}
-		
+
 		.with-tooltip {
 			display: inline-block;
 			margin-bottom: 30px;
 			overflow: hidden;
 		}
-		
+
 		.avatar {
 			display: block;
 			width: 40px;
@@ -36,30 +39,30 @@
 			margin: 0 auto 20px auto;
 			cursor: pointer;
 		}
-		
+
 		.blue {
 			background-color: var(--paper-light-blue-300);
 		}
-		
+
 		.red {
 			background-color: var(--paper-red-300);
 		}
-		
+
 		.orange {
 			background-color: var(--paper-amber-300);
 		}
-		
+
 		.green {
 			background-color: var(--paper-green-300);
 		}
-		
+
 		cbn-tooltip.custom img {
 			width: 40px;
 			padding-right: 10px;
 			padding-bottom: 10px;
 			float: left;
 		}
-		
+
 		.custom {
 			--cbn-tooltip-background: black;
 			--cbn-tooltip-text-color: var(--paper-pink-100);
@@ -68,83 +71,94 @@
 	</style>
 </head>
 <body unresolved>
-<div class="horizontal-section-container">
-	<div>
-		<h4>Anchored to native elements</h4>
-		<div class="horizontal-section">
-			<div class="with-tooltip" tabindex="0">
-				<input type="checkbox">Oxygen
-				<cbn-tooltip>Atomic number: 8</cbn-tooltip>
+<form id="demoForm" is="cbn-form" model>
+	<demo-snippet class="centered-demo" style="position:relative">
+		<template is="dom-bind">
+			<h4>Anchored to native elements</h4>
+			<div class="horizontal-section">
+				<div class="with-tooltip" tabindex="0">
+					<input type="checkbox">Oxygen
+					<cbn-tooltip>Atomic number: 8</cbn-tooltip>
+				</div>
+				<br>
+				<div class="with-tooltip" tabindex="0">
+					<input type="checkbox">Carbon
+					<cbn-tooltip>Atomic number: 6</cbn-tooltip>
+				</div>
+				<br>
+				<div class="with-tooltip" tabindex="0">
+					<input type="checkbox">Hydrogen
+					<cbn-tooltip>Atomic number: 1</cbn-tooltip>
+				</div>
+				<br>
+				<div class="with-tooltip" tabindex="0">
+					<input type="checkbox">Nitrogen
+					<cbn-tooltip>Atomic number: 7</cbn-tooltip>
+				</div>
+				<br>
+				<div class="with-tooltip" tabindex="0">
+					<input type="checkbox">Calcium
+					<cbn-tooltip>Atomic number: 20</cbn-tooltip>
+				</div>
 			</div>
-			<br>
-			<div class="with-tooltip" tabindex="0">
-				<input type="checkbox">Carbon
-				<cbn-tooltip>Atomic number: 6</cbn-tooltip>
+		</template>
+	</demo-snippet>
+	<br/>
+	<demo-snippet>
+		<template is="dom-bind">
+			<h4>Anchored to custom elements</h4>
+			<div class="horizontal-section">
+				<paper-icon-button id="heart" icon="favorite" alt="heart"></paper-icon-button>
+				<paper-icon-button id="back" icon="arrow-back" alt="go back"></paper-icon-button>
+				<paper-icon-button id="fwd" icon="arrow-forward" alt="go forward"></paper-icon-button>
+
+				<!-- paper-icon-buttons have an inherent padding that will push the tooltip down. offset undoes it -->
+				<cbn-tooltip for="#heart" offset="0">&lt;3 &lt;3 &lt;3</cbn-tooltip>
+				<cbn-tooltip for="#back" offset="0">halp I am trapped in a tooltip</cbn-tooltip>
+				<cbn-tooltip for="#fwd" offset="0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+					Etiam pulvinar erat id nisi facilisis mollis. Aliquam erat volutpat.
+					Pellentesque a vehicula enim. Praesent dictum nulla ac ipsum condimentum eleifend.
+					Morbi blandit orci id felis sollicitudin, vel lobortis mauris iaculis.
+					Morbi ultrices, massa sed viverra venenatis, metus nulla placerat lorem, at sodales dui dolor at
+					massa.
+					Vivamus turpis nunc, tincidunt ac velit id, vulputate tincidunt ligula. Donec ac malesuada ex.
+					Nullam sit amet venenatis odio, ornare gravida velit. Cras vitae leo finibus orci consectetur
+					vehicula.
+					Duis sed tortor tellus. Vestibulum nisl quam, viverra non eleifend ut, elementum non enim.
+					Suspendisse maximus nisl ac sapien dignissim pellentesque.
+				</cbn-tooltip>
 			</div>
-			<br>
-			<div class="with-tooltip" tabindex="0">
-				<input type="checkbox">Hydrogen
-				<cbn-tooltip>Atomic number: 1</cbn-tooltip>
+		</template>
+	</demo-snippet>
+	<br/>
+	<demo-snippet>
+		<template is="dom-bind">
+			<h4>Rich-text tooltips (not Material Design)</h4>
+			<div class="horizontal-section">
+				<div id="red" class="avatar red" tabindex="0"></div>
+				<div id="blue" class="avatar blue" tabindex="0"></div>
+				<div id="green" class="avatar green" tabindex="0"></div>
+				<div id="orange" class="avatar orange" tabindex="0"></div>
+
+				<cbn-tooltip for="#red" class="custom" position="left" animation-delay="0">
+					<img src="http://i.imgur.com/OuUe8Da.jpg">
+					Rich-text tooltips are doable but against the Material Design spec.
+				</cbn-tooltip>
+				<cbn-tooltip for="#blue" class="custom" position="right" animation-delay="0">
+					<img src="http://i.imgur.com/OuUe8Da.jpg">
+					Rich-text tooltips are doable but against the Material Design spec.
+				</cbn-tooltip>
+				<cbn-tooltip for="#green" class="custom" position="top" animation-delay="0">
+					<img src="http://i.imgur.com/OuUe8Da.jpg">
+					Rich-text tooltips are doable but against the Material Design spec.
+				</cbn-tooltip>
+				<cbn-tooltip for="#orange" class="custom" position="bottom" animation-delay="0">
+					<img src="http://i.imgur.com/OuUe8Da.jpg">
+					Rich-text tooltips are doable but against the Material Design spec.
+				</cbn-tooltip>
 			</div>
-			<br>
-			<div class="with-tooltip" tabindex="0">
-				<input type="checkbox">Nitrogen
-				<cbn-tooltip>Atomic number: 7</cbn-tooltip>
-			</div>
-			<br>
-			<div class="with-tooltip" tabindex="0">
-				<input type="checkbox">Calcium
-				<cbn-tooltip>Atomic number: 20</cbn-tooltip>
-			</div>
-		</div>
-	</div>
-	<div>
-		<h4>Anchored to custom elements</h4>
-		<div class="horizontal-section">
-			<paper-icon-button id="heart" icon="favorite" alt="heart"></paper-icon-button>
-			<paper-icon-button id="back" icon="arrow-back" alt="go back"></paper-icon-button>
-			<paper-icon-button id="fwd" icon="arrow-forward" alt="go forward"></paper-icon-button>
-			
-			<!-- paper-icon-buttons have an inherent padding that will push the tooltip down. offset undoes it -->
-			<cbn-tooltip for="#heart" offset="0">&lt;3 &lt;3 &lt;3</cbn-tooltip>
-			<cbn-tooltip for="#back" offset="0">halp I am trapped in a tooltip</cbn-tooltip>
-			<cbn-tooltip for="#fwd" offset="0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-				Etiam pulvinar erat id nisi facilisis mollis. Aliquam erat volutpat. 
-				Pellentesque a vehicula enim. Praesent dictum nulla ac ipsum condimentum eleifend. 
-				Morbi blandit orci id felis sollicitudin, vel lobortis mauris iaculis. 
-				Morbi ultrices, massa sed viverra venenatis, metus nulla placerat lorem, at sodales dui dolor at massa. 
-				Vivamus turpis nunc, tincidunt ac velit id, vulputate tincidunt ligula. Donec ac malesuada ex. 
-				Nullam sit amet venenatis odio, ornare gravida velit. Cras vitae leo finibus orci consectetur vehicula. 
-				Duis sed tortor tellus. Vestibulum nisl quam, viverra non eleifend ut, elementum non enim. 
-				Suspendisse maximus nisl ac sapien dignissim pellentesque.</cbn-tooltip>
-		</div>
-	</div>
-	<div>
-		<h4>Rich-text tooltips (not Material Design)</h4>
-		<div class="horizontal-section">
-			<div id="red" class="avatar red" tabindex="0"></div>
-			<div id="blue" class="avatar blue" tabindex="0"></div>
-			<div id="green" class="avatar green" tabindex="0"></div>
-			<div id="orange" class="avatar orange" tabindex="0"></div>
-			
-			<cbn-tooltip for="#red" class="custom" position="left" animation-delay="0">
-				<img src="http://i.imgur.com/OuUe8Da.jpg">
-				Rich-text tooltips are doable but against the Material Design spec.
-			</cbn-tooltip>
-			<cbn-tooltip for="#blue" class="custom" position="right" animation-delay="0">
-				<img src="http://i.imgur.com/OuUe8Da.jpg">
-				Rich-text tooltips are doable but against the Material Design spec.
-			</cbn-tooltip>
-			<cbn-tooltip for="#green" class="custom" position="top" animation-delay="0">
-				<img src="http://i.imgur.com/OuUe8Da.jpg">
-				Rich-text tooltips are doable but against the Material Design spec.
-			</cbn-tooltip>
-			<cbn-tooltip for="#orange" class="custom" position="bottom" animation-delay="0">
-				<img src="http://i.imgur.com/OuUe8Da.jpg">
-				Rich-text tooltips are doable but against the Material Design spec.
-			</cbn-tooltip>
-		</div>
-	</div>
-</div>
+		</template>
+	</demo-snippet>
+</form>
 </body>
 </html>
